bridge/base/api-deployment.yaml
#! api-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api
    namespace: my-first-api
    labels:
        com.docker.compose.project: my-first-api
        com.docker.compose.service: api
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: my-first-api
            com.docker.compose.service: api
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: my-first-api
                com.docker.compose.service: api
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: api
                  image: my-first-api-api
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: api-8000
                      containerPort: 8000
                  volumeMounts:
                    - name: app
                      mountPath: /app
            volumes:
                - name: app
                  hostPath:
                    path: /Users/estebanlema/my-first-api
