bridge/base/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: my-first-api
spec:
  replicas: 1
  selector:
    matchLabels:
      com.docker.compose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        com.docker.compose.service: db
        com.docker.compose.network.default: "true"
    spec:
      containers:
        - name: db
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data
