bridge/base/api-service.yaml
# check if there is at least one published port

#! api-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: api-published
    namespace: my-first-api
    labels:
        com.docker.compose.project: my-first-api
        com.docker.compose.service: api
spec:
    selector:
        com.docker.compose.project: my-first-api
        com.docker.compose.service: api
    ports:
        - name: api-8000
          port: 8000
          protocol: TCP
          targetPort: api-8000
