bridge/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: my-first-api
spec:
  selector:
    com.docker.compose.service: db
  ports:
    - port: 5432
      targetPort: 5432
